--- a/assets/styles/main/_personal-classes.scss
+++ b/assets/styles/main/_personal-classes.scss
@@ -220,7 +220,7 @@
   display: flex;
   justify-content: flex-start;
 }
-.tstart {text-align: start}
+.tstart {text-align: left}
 .end {
   display: flex;
   justify-content: flex-end;
@@ -234,7 +234,7 @@
   display: flex;
   justify-content: flex-end;
 }
-.tend {text-align: end}
+.tend {text-align: right}
 .center {
   display: flex;
   justify-content: center;
