--- a/assets/styles/main/_personal-classes.scss
+++ b/assets/styles/main/_personal-classes.scss
@@ -45,6 +45,9 @@
 .font2 {font-family:var(--font2) !important}
 .font3 {font-family:var(--font3) !important}
 .font4 {font-family:var(--font4) !important}
+.font5 {font-family:var(--font5) !important}
+.font6 {font-family:var(--font6) !important}
+.font7 {font-family:var(--font7) !important}
 .h1 {font-size: var(--step-8) !important}
 .h2 {font-size: var(--step-7) !important}
 .h3 {font-size: var(--step-6) !important}
