--- a/assets/styles/main/_fonts.scss
+++ b/assets/styles/main/_fonts.scss
@@ -87,3 +87,49 @@
   font-style: normal;
   font-display: swap;
 }
+
+
+
+// Clash Display
+@font-face {
+  font-family: 'Clash Display';
+  src: url(~/static/fonts/Clash-Display/ClashDisplay-Extralight.otf) format('opentype');
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Clash Display';
+  src: url(~/static/fonts/Clash-Display/ClashDisplay-Light.otf) format('opentype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Clash Display';
+  src: url(~/static/fonts/Clash-Display/ClashDisplay-Regular.otf) format('opentype');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Clash Display';
+  src: url(~/static/fonts/Clash-Display/ClashDisplay-Medium.otf) format('opentype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Clash Display';
+  src: url(~/static/fonts/Clash-Display/ClashDisplay-Semibold.otf) format('opentype');
+  font-weight: 600;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Clash Display';
+  src: url(~/static/fonts/Clash-Display/ClashDisplay-Bold.otf) format('opentype');
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
