--- a/assets/styles/main/_variables.scss
+++ b/assets/styles/main/_variables.scss
@@ -5,55 +5,63 @@
 //========== Variables ==========//
 :root {
   /* // // color // // */
-  --primary: #FFCD4D;
-  --secondary: #1A1917;
-  --accent: #574F42;
-  --active: var(--primary);
   --error: #B65C58;
   --warning: #FFD566;
   --success: #38A169;
-  // --clr-gradient: linear-gradient(to right top,#356D74,#2A505C,#21394A,#1A293D,#172035,#161D33,#161E34,#192539,#1E3143,#244251,#2D5862,#387378,#449492,#53B9B1,#63E2D2);
   --c: var(--clr);
   /* // // themes // // */
   &.light {
     // default color
-    --bg-ap: #4ddaeb;
+    --primary: linear-gradient(197.1deg, #A093F0 6.74%, #5A9FF7 89.6%);
+    --secondary: #242728;
+    --tertiary: #A2C5FA;
+    --quaternary: #A194F1;
+    --accent: linear-gradient(0deg, #4ABCA4, #4ABCA4), #FFFFFF;;
+    --active: var(--primary);
+    --gradient: var(--primary);
+    --gradient-2: linear-gradient(99.45deg, #A093F0 7.5%, #5A9FF7 94.48%);
+    --bg-ap: #F1EDE9;
     --clr: #000000;
-    --clr-hover: hsl(288 90% 10%);
-    --clr-scroll: var(--primary);
-    --clr-bg-scroll: var(--secondary);
+    --hover: hsl(288 90% 10%);
+    --scroll: var(--primary);
+    --bg-scroll: var(--secondary);
     // cards
-    --clr-card: #FFFFFF;
+    --card: #EBE5E0;
     // buttons
-    --clr-btn: var(--primary);
-    /*--clr-btn-pressed: #AD0FD5;
-    --clr-btn-inactive: #AD0FD5;*/
-    --clr-text-btn: #000000;
+    --btn: #E1D8D1;
+    --btn-pressed: rgba(215, 203, 193, 0.7);;
+    /*--btn-inactive: #AD0FD5;*/
+    --text-btn: #000000;
     // badge
-    --clr-badge: var(--primary);
-    --clr-text-badge: #000000;
+    --badge: var(--primary);
+    --text-badge: #000000;
     // line
-    --clr-line: #2D291D;
+    --line: #242728;
+    --line-accent: #00A478;
   }
   &.dark {
     // default color
+    --primary: #FFCD4D;
+    --secondary: #1A1917;
+    --accent: #574F42;
+    --active: var(--primary);
     --bg-ap: #161513;
     --clr: #FFFFFF;
-    --clr-hover: hsl(288 90% 90%);
-    --clr-scroll: #574F42;
-    --clr-bg-scroll: #292724;
+    --hover: hsl(288 90% 90%);
+    --scroll: #574F42;
+    --bg-scroll: #292724;
     // cards
-    --clr-card: var(--secondary);
+    --card: var(--secondary);
     // buttons
-    --clr-btn: var(--primary);
-    /*--clr-btn-pressed: #AD0FD5;
-    --clr-btn-inactive: #AD0FD5;*/
-    --clr-text-btn: #1F1C14;
+    --btn: var(--primary);
+    /*--btn-pressed: #AD0FD5;
+    --btn-inactive: #AD0FD5;*/
+    --text-btn: #1F1C14;
     // badge
-    --clr-badge: var(--primary);
-    --clr-text-badge: #1F1C14;
+    --badge: var(--primary);
+    --text-badge: #1F1C14;
     // line
-    --clr-line: #292724;
+    --line: #292724;
   }
   /* // // fonts // // */
   --font1: 'DM Sans', sans-serif;
@@ -62,6 +70,7 @@
   --font4: 'Poppins', sans-serif;
   --font5: 'Open Sans', sans-serif;
   --font6: 'Cabinet Grotesk', sans-serif;
+  --font7: 'Clash Display', sans-serif;
   --fw: initial;
   /* // // sizes // // */
   --resizer: clamp(12px, 1vw, 16px);
@@ -89,8 +98,8 @@ $content-padding:                           24px;
 $sombra-filter: drop-shadow(0px 4px 1px rgba(0, 0, 0, 0.3));
 
 //========== Colors ==========//
-$primary:           #FFCD4D;
-$secondary:         #1A1917;
+$primary:           #A093F0;
+$secondary:         #5A9FF7;
 $accent:            #574F42;
 $error:             #B65C58;
 $warning:           #FFD566;
