--- a/assets/styles/main/_custom-mixins.scss
+++ b/assets/styles/main/_custom-mixins.scss
@@ -71,6 +71,7 @@
   --f: initial;
   --t: initial;
   
+  font-weight: var(--fw)!important;
   background: var(--bg) !important;
   color: var(--c) !important;
   box-shadow: var(--bs) !important;
