--- a/assets/styles/pages/swap.scss
+++ b/assets/styles/pages/swap.scss
@@ -4,102 +4,191 @@
 #swap {
   @include parent;
   padding-inline: var(--margin-global);
+  padding-bottom: 300px;
+  @include media(max, 700px){padding-bottom: 150px;}
 
-  &-content {
-    margin-top: 1em;
-    gap: 2.5em;
-    > * {
-      min-width: 220px !important;
-      min-height: 341px !important;
+  .img-container{
+    max-width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .circle-bottom{
+      position: absolute;
+      bottom: -100px;
+      max-width: 80%;
     }
-    @include media(max, 1360px) {
-      > :nth-child(1) {order: 0}
-      > :nth-child(2) {order: 2}
-      > :nth-child(3) {order: 1}
-    }
-    @include media(max, small) {
-      padding-bottom: 80px;
-      flex-direction: column;
-      > :nth-child(1) {display: none}
-      > :nth-child(2) {order: 0}
-      > :nth-child(3) {display: none}
-      > * {
-        --size: clamp(280px, 1vw, 300px);
-        width: var(--size) !important;
-        min-width: var(--size) !important;
-        max-width: var(--size) !important;
-      }
+  }
+    .swap-title{
+      font-weight: 500!important;
+      font-family: var(--font7)!important;
+      margin-bottom: 80px;
     }
 
-    .left {max-width: 292px !important}
+    .mobile-column{
+      @include media(max,850px){
+        flex-direction: column;
+        gap: 90px!important;
+        justify-content: center;
+        align-items: center;
+      }
+    }
 
-    .middle {
-      --size: max-content;
-      @include media(max, 500px) {--size: 100%}
-      width: var(--size) !important;
-      max-width: var(--size) !important;
-      > div.space {
-        center {
-          transform: translateY(calc(62px / 2));
-          margin-inline: clamp(5px, .6vw, 20px);
-        }
-        @include media(max, small) {
-          flex-direction: column !important;
-          center {
-            transform: translateY(calc(62px / 3));
-            img {--t: rotate(90deg)}
-          }
-        }
-      }
-      aside.target_drag {
-        --size: 13em;
-        @include media(max, 1360px) {--size: 288px}
-        @include media(max, 500px) {--size: 100%}
-        width: var(--size) !important;
-        max-width: var(--size) !important;
-        min-width: var(--size) !important;
-        min-height: var(--h-cards) !important;
-        justify-content: space-between;
-        position: relative;
-        .v-card {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          @include media(max, small) {
-            * {text-align: center !important}
-          }
-          > label {
-            margin-top: 10px;
-            padding-inline: 12px;
-          }
-        }
-      }
-      .v-chip {--tt: uppercase !important}
-      
-      &.focus {
-        .target_drag::after {
-          content:  "";
-          position: absolute;
-          inset: -20px;
-          border-radius: 60px;
-          box-shadow: inset 0 0 50px 1px hsl(0 0% 100% / .2);
-          z-index: 10;
-          @include animation(2s $ease-return infinite alternate) {
-            from {transform: scale(1.02)}
-            to {transform: scale(1)}
-          }
-        }
-      }
+    .charts-footer .v-btn {
+      --w: 28px;
+      --h: 24.65px;
+      border-radius: 5px !important;
+      background-color: #E1D8D1!important;
+      width: var(--w) !important;
+      max-width: var(--w) !important;
+      min-width: var(--w) !important;
+      height: var(--h) !important;
+      min-height: var(--h) !important;
+      max-height: var(--h) !important;
+      border: 1px solid #000000 !important;
+      text-transform: uppercase!important;
+    } 
+
+    .theme--dark.v-btn--active::before {
+      opacity: 1;
+      background-color: #4ABCA4!important;
+      border: 1px solid #00A478!important;
     }
 
     .right {
-      max-width: 318px !important;
-      .grid {
-        --gtc: repeat(auto-fit, minmax(min(100%, 80px), 1fr));
-        overflow-y: auto;
-        border-radius: 0;
-        img {cursor: grab}
+      max-width: 380px !important;
+      width: 380px!important;
+      height: 360px!important;
+      background-color: var(--card)!important;
+
+      @include media(max, 435px){
+        max-width: 300px!important;
       }
     }
-  }
+
+    .swap-card{
+      background-color: var(--card);
+      border: 1px solid #000000;
+      border-radius: 15px;
+      height: 360px;
+      max-width: 380px!important;
+      padding-block: 20px;
+      padding-inline: 20px;
+      position: relative!important;
+
+      @include media(max, 435px){
+        max-width: 300px!important;
+      }
+
+      .mobile-btn{
+        @include media(max, 435px){
+          width: 280px!important;
+          max-width: 280px!important;
+        }
+      }
+  
+      .swap-text{
+        --fw: 700px!important;
+        font-size: 20px;
+        font-family: var(--font1);
+        align-self: flex-start;
+      }
+  
+      .dm-400{
+        --fw: 400px!important;
+        font-size: 16px;
+        font-family: var(--font1);
+        align-self: flex-start;
+      }
+  
+      .dm-light{
+        --fw: 400px!important;
+        font-size: 16px;
+        font-family: var(--font1);
+        color:rgba(#000000, 0.5)!important;
+      }
+  
+      .swap-container{
+        background-color: #E1D8D0;
+        border: 1px solid #000000;
+        border-radius: 15px;
+        max-height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 10px;
+        padding-inline: 20px;
+        max-width: 350px;
+        width: 350px;
+
+        @include media(max, 435px){
+          max-width: 280px!important;
+        }  
+  
+        .input-auto{
+          max-width: 150px;
+        }
+  
+        .input-number {
+          text-align: center!important;
+          max-width: 50px;
+  
+          ::placeholder{
+            color: rgba(#000000, 0.5);
+          }
+        }
+  
+        .btn-max{
+          height: 30px;
+          width: 40px;
+          min-height: 20px!important;
+          min-width: 25px!important;
+          border: 1px solid #000000;
+          border-radius: 5px;
+          background-color: #A2C5FA;
+          
+          span{
+            font-weight: 700!important;
+          }
+        }
+      }
+
+      .atag{
+        font-weight: 400!important;
+        font-family: var(--font1)!important;
+        position: absolute;
+        text-decoration: underline!important;
+        bottom: -50px;
+        color: #5A9FF7;
+      }
+
+      .menu-btn{
+        background-color: #E1D8D0;
+        border: 1px solid #000000;
+        width: 30px;
+        height: 30px;
+        min-height: 1px;
+        min-width: 1px;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        border-radius: 11px;
+      }
+    }
+  // }
+}
+
+
+
+////////Barrita transversal del input/////////
+//////////////////////////////////////////////
+
+
+.v-input__slot:before{
+  border-color: #fff!important;
+}
+
+.v-text-field > .v-input__control > .v-input__slot:before, 
+.v-text-field > .v-input__control > .v-input__slot:after {
+  width: 0%;
 }
