--- a/assets/styles/main/_variables.scss
+++ b/assets/styles/main/_variables.scss
@@ -12,7 +12,7 @@
   /* // // themes // // */
   &.light {
     // default color
-    --primary: linear-gradient(197.1deg, #A093F0 6.74%, #5A9FF7 89.6%);
+    --primary: linear-gradient(#A093F0, #5A9FF7);
     --secondary: #242728;
     --tertiary: #A2C5FA;
     --quaternary: #A194F1;
