--- a/assets/styles/layouts/default.scss
+++ b/assets/styles/layouts/default.scss
@@ -45,7 +45,7 @@
     --w: max-content;
     --h: 49px;
     --br: 100px;
-    --bg: #1A1917;
+    --bg: var(--primary);
     --b: 1px solid #2D291D;
     --c: #ffffff !important;
     --fw: 700;
@@ -56,7 +56,7 @@
     position: fixed;
     left: var(--margin-global);
     bottom: 10%;
-    z-index: 10;
+    z-index: 1000;
   }
 }
 
