--- a/assets/styles/main/_personal-classes.scss
+++ b/assets/styles/main/_personal-classes.scss
@@ -974,3 +974,12 @@
   </span>
 */
 
+
+.v-select-list .v-list-item--active {
+  background: var(--primary) !important;
+  --c:#fff!important;
+}
+
+.v-list{
+  margin-top: 40px;
+}
