--- a/assets/styles/pages/landing.scss
+++ b/assets/styles/pages/landing.scss
@@ -42,6 +42,13 @@
       font-weight: 500!important;
       font-family: var(--font7)!important;
       font-size: 60px!important;
+
+      @include media (max, 640px){
+        text-align: center;
+        font-size: 48px!important;
+        max-width: 80%;
+        margin-bottom: 0px;
+      }
     }
   
     .poppins{
@@ -49,6 +56,12 @@
       font-family: var(--font4)!important;
       font-size: 21px!important;
       color: rgba($color: #000000, $alpha: 0.4)!important;
+
+      @include media (max, 640px){
+        text-align: center;
+        font-size: 16px!important;
+        max-width: 80%;
+      }
     }
   
     .btn-black{
@@ -64,6 +77,10 @@
       @include media(max,920px){
         align-self: flex-start;
       }
+
+      @include media (max, 640px){
+        align-self: center;
+      }
     }
   }
 
@@ -72,6 +89,10 @@
     justify-content: center;
     align-items: center;
     position: relative;
+
+    @include media (max, 640px){
+      display: none;
+    }
 
     .grey-card{
       background-color: rgba(#000000, 0.1);
@@ -227,6 +248,13 @@
       left: 0px;
       margin-bottom: 20px;
     }
+
+    @include media (max, 640px){
+      text-align: center;
+      font-size: 40px!important;
+      max-width: 80%;
+      margin-bottom: 10px;
+    }
   }
 
   .container-cards{
@@ -310,6 +338,13 @@
     max-width: 40%;
     text-align: center;
     margin-bottom: 30px;
+
+    @include media (max, 640px){
+      text-align: center;
+      font-size: 36px!important;
+      max-width: 80%;
+      margin-bottom: 10px;
+    }
   }
 
   .preview-container{
