--- a/assets/styles/pages/farm-details.scss
+++ b/assets/styles/pages/farm-details.scss
@@ -4,6 +4,7 @@
 #farm-details {
   @include parent;
   padding-inline: var(--margin-global);
+  max-width: 1440px;
 
   &-header {
     h1 {
@@ -160,11 +161,22 @@
     border-radius: 0px!important;
     border-top: solid 1px #000000!important;
     border-bottom: solid 1px #000000!important;
+    --fm:var(--font2); 
+    --c: #767A89; 
+    font-weight: 700!important; 
+    font-size: 16px;
 
     @include media(max, 840px){
       border-top: none!important;
       border-bottom: solid 1px #000000!important;
     }
+  }
+
+  .v-data-table td:first-of-type{
+    --fm:var(--font2); 
+    --c: #000000; 
+    font-weight: 700!important; 
+    font-size: 16px;
   }
 
   .v-data-table tbody tr td:first-child{
@@ -206,6 +218,85 @@
       justify-content: flex-start;
       align-items: flex-start;
       gap: 20px;
+    }
+  }
+
+  .mobile-table{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .title-grid{
+      min-width: 100%;
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: 1fr;
+      grid-gap: 5px; 
+      margin-bottom: 30px;
+
+      .element1 {
+        grid-column: 1 / 3;
+        place-self: start;
+      }
+      
+      .element2 {
+        grid-column: 3 / 4;
+        place-self: center;
+      }
+      
+      .element3 {
+        grid-column: 4 / 5;
+        place-self: center;
+      }
+      
+      .element4 {
+        grid-column: 5 / 6;
+        place-self: center;
+      }
+
+      .light-text{
+        --fm:var(--font2); 
+        --c: #767A89; 
+        font-weight: 700!important; 
+        font-size: 16px;
+      }
+    }
+
+    .card-mobile{
+      border: 1px solid #000000;
+      background-color: var(--card);
+      border-radius: 10px;
+      margin-bottom: 20px;
+      min-width: 100%;
+      display: flex;
+      flex-direction: column;
+      padding-inline: 10px;
+      padding-block: 30px;
+      gap: 5px;
+
+      .light-text{
+        --fm:var(--font2); 
+        --c: #767A89; 
+        font-weight: 700!important; 
+        font-size: 18px;
+      }
+
+      .pool-text{
+        --fm:var(--font2); 
+        --c: #000000; 
+        font-weight: 700!important; 
+        font-size: 16px;
+      }
+
+      .v-btn{
+        width: 100%!important;
+        border: 1px solid #000000!important;
+      }
+
+      .custom-button{
+        background: #000000!important;
+      }
     }
   }
 }
