--- a/assets/styles/pages/faucet.scss
+++ b/assets/styles/pages/faucet.scss
@@ -154,5 +154,9 @@
     border-top-left-radius: 0px!important;
     border-bottom-left-radius: 0px!important;
   }
+
+  .data-table-faucet tr {
+    background-color: transparent!important;
+  }
 }
 
