--- a/assets/styles/main/_variables.scss
+++ b/assets/styles/main/_variables.scss
@@ -5,7 +5,7 @@
 //========== Variables ==========//
 :root {
   /* // // color // // */
-  --error: #B65C58;
+  --error: #E53E3E;
   --warning: #FFD566;
   --success: #38A169;
   --c: var(--clr);
