--- a/assets/styles/components/alerts.scss
+++ b/assets/styles/components/alerts.scss
@@ -5,18 +5,17 @@
   .v-snack {
     @include parent;
     padding-inline: var(--margin-global);
-    justify-content: flex-end;
     @include media(max, x-small) {font-size: 10px}
+    justify-content: center;
+    align-items: flex-start;
   }
   .v-snack__wrapper {
     min-width: 25em !important;
     background: var(--bg-snackbar);
-    border: 1px solid var(--color-snackbar) !important;
     border-radius: 6px;
     padding: 10px 15px;
     animation: moveup .5s $ease-return;
     
-    bottom: var(--h-footer, 80px);
     right: 0 !important;
     left: auto !important;
     .v-snack__content {
