--- a/assets/styles/components/navbar.scss
+++ b/assets/styles/components/navbar.scss
@@ -59,6 +59,27 @@
       .v-btn__content{
         height: 30px!important;
       }
+
+      .v-select{
+        padding-inline: 10px;
+        border-radius: 30px;
+        width: 130px!important;
+        
+        .v-select__selection{
+          background: linear-gradient(99.45deg, #A093F0 7.5%, #5A9FF7 94.48%) !important;
+          -webkit-background-clip: text !important;
+          -webkit-text-fill-color: transparent !important;
+          background-clip: text !important;
+          font-weight: 700!important;
+        }
+
+        input{
+          margin-top: 5px;
+        }
+        i{
+          margin-top: 5px;
+        }
+      }
     }
   }
 }
