--- a/assets/styles/pages/liquidity.scss
+++ b/assets/styles/pages/liquidity.scss
@@ -133,4 +133,73 @@
       }
     }
   }
+
+  .input-auto{
+    max-height: 40px;
+    min-height: 1px!important;
+    max-width: 140px!important;
+
+    .v-input__control{
+      max-height: 40px!important;
+      min-height: 1px!important;
+    }
+  
+    .v-select__selections{
+      margin-top: 5px;
+    }
+
+    i{
+      margin-top: 5px;
+    }
+  }
+
+  .input{
+    background-color: transparent;
+    max-width: 80px;
+
+    input{
+      max-height: 20px;
+      min-height: 1px;
+      margin-top: 13px;
+      font-size: 12px;
+      color: #000;
+      text-align: end;
+    }
+
+    ::placeholder{
+      font-size: 14px;
+      color: #000;
+      opacity: 1;
+    }
+
+    .v-input__slot{
+      max-height: 20px;
+      min-height: 1px;
+    }
+
+    .v-input__control{
+      max-height: 20px;
+      min-height: 1px;
+    }
+  }
+}
+
+
+.v-autocomplete__content.v-menu__content .v-select-list{
+  background-color: #EBE5E0!important;
+  border: 1px solid #000!important;
+  margin-top: 0px;
+
+  span{
+    color: #000!important;
+    font-weight: 700!important;
+  }
+}
+
+.v-select-list .v-list-item--active {
+  background: transparent !important;
+}
+
+.theme--dark.v-list-item.v-list-item--highlighted::before {
+  opacity: 0;
 }
