--- a/assets/styles/main/_custom-mixins.scss
+++ b/assets/styles/main/_custom-mixins.scss
@@ -162,9 +162,9 @@
   --h: initial;
   --max-h: none;
   --min-h: none;
-  --bg: var(--clr-card);
+  --bg: #EBE5E0;
   --c: var(--clr);
-  --b: 0.877506px solid var(--line);
+  --b: 2px solid #D7CBC1;
   --p: 1.5em;
   --br: 30px;
   --bs: none;
