--- a/assets/styles/pages/farm-details.scss
+++ b/assets/styles/pages/farm-details.scss
@@ -104,11 +104,21 @@
     background-clip: text;
     color: transparent;
   }
+  
+  .btn-grey{
+    background-color: #E1D7D0;
+    width:150px; 
+    min-height: 55px; 
+    border-radius: 10px!important;
+    box-shadow: none!important;
+    span{
+      color: #000!important;
+    }
+  }
 
   .input-data-table{
     background-color: var(--card);
     border-radius: 10px;
-    border: 1px solid #000;
     max-width: 250px;
     padding-inline: 10px;
     padding-block: 10px;
@@ -137,13 +147,13 @@
     width: 75px!important;
     min-width: 65px!important;
     background-color: var(--card);
-    border-top: 1px solid #000000!important;
-    border-bottom: 1px solid #000000!important;
-    border-right: 1px solid #000000!important;
+    border-top: 1px solid #D7CBC1!important;
+    border-bottom: 1px solid #D7CBC1!important;
+    border-right: 1px solid #D7CBC1!important;
   }
 
   .btn-toggle:first-child{
-    border-left: 1px solid #000000!important;
+    border-left: 1px solid #D7CBC1!important;
   }
 
   .v-data-table tbody tr:has(.nopevents) {
@@ -152,15 +162,15 @@
   }
 
   .v-data-table tbody tr{
-    background-color: var(--card) !important;
-    border: solid 1px #000000!important;
+    background-color: #EBE5E0 !important;
+    border: solid 2px #D7CBC1!important;
   }
 
   .v-data-table td{
     background-color: var(--card) !important;
     border-radius: 0px!important;
-    border-top: solid 1px #000000!important;
-    border-bottom: solid 1px #000000!important;
+    border-top: solid 2px #D7CBC1!important;
+    border-bottom: solid 2px #D7CBC1!important;
     --fm:var(--font2);
     --c: #767A89;
     font-weight: 700!important;
@@ -168,7 +178,7 @@
 
     @include media(max, 840px){
       border-top: none!important;
-      border-bottom: solid 1px #000000!important;
+      border-bottom: solid 2px #D7CBC1!important;
     }
   }
 
@@ -180,7 +190,7 @@
   }
 
   .v-data-table tbody tr td:first-child{
-    border-left: solid 1px #000000!important;
+    border-left: solid 2px #D7CBC1!important;
     border-top-left-radius: 25px!important;
     border-bottom-left-radius: 25px!important;
 
@@ -188,12 +198,12 @@
       border-top-left-radius: 0px!important;
       border-bottom-left-radius: 0px!important;
       border-left: none!important;
-      border-bottom: 1px solid #000000!important;
+      border-bottom: 2px solid #D7CBC1!important;
     }
   }
 
   .v-data-table tbody tr td:nth-child(3){
-    border-right: solid 1px #000000!important;
+    border-right: solid 2px #D7CBC1!important;
     border-top-right-radius: 25px!important;
     border-bottom-right-radius: 25px!important;
 
@@ -291,7 +301,6 @@
 
       .v-btn{
         width: 100%!important;
-        border: 1px solid #000000!important;
       }
 
       .custom-button{
