--- a/assets/styles/pages/faucet.scss
+++ b/assets/styles/pages/faucet.scss
@@ -24,7 +24,7 @@
 
   .faucet-title{
     font-weight: 500!important;
-    font-family: var(--font7)!important;
+    font-family: var(--font1)!important;
     margin-bottom: 20px;
     font-size: 32px!important;
   }
@@ -32,7 +32,7 @@
   .sub-title{
     font-family: var(--font5)!important;
     font-size: 16px!important;
-    font-weight: 700!important;
+    font-weight: 500!important;
     color: rgba(#000000, 0.66);
   }
 
@@ -76,17 +76,18 @@
 
   .btn-faucet{
     background-color: #A194F1;
-    border: 1px solid #000000;
-    width: 80px;
+    width: 100px;
     height: 40px;
     min-height: 40px;
-
+    border-radius: 15px!important;
+    
     @include media(max, 600px){
       width: 60px;
     }
     
     span{
       font-weight: 600!important;
+      color: #fff!important;
     }
   }
 
@@ -123,9 +124,9 @@
   }
 
   .data-table-faucet td {
-    background-color: #E1D8D1;
-    border: 1px solid #000000;
-    border-bottom: 1px solid #000000!important;
+    background-color: #EBE5E0;
+    // border: 1px solid #000000;
+    // border-bottom: 1px solid #000000!important;
     border-radius: 15px!important;
     padding-block: 10px!important;
 
