--- a/assets/styles/pages/liquidity.scss
+++ b/assets/styles/pages/liquidity.scss
@@ -87,6 +87,28 @@
     }
   }
 
+  .no-overflow{
+    overflow-x: hidden;
+  }
+
+  .hr{
+    width: 160%;
+    position: relative;
+    left: -50px;
+    border-top: 0px solid transparent!important;
+    border-bottom: 2px solid #E1D8D1!important;
+  }
+
+  .border-bottom::after {
+    content: "";
+    // display: block;
+    position: absolute;
+    margin-top: 60px;
+    left: -50px;
+    border-bottom: 2px solid #E1D8D1;
+    width: 500px;
+  }
+
   .btn-add{
     min-width: 100%!important;
   }
