--- a/assets/styles/main/_fonts.scss
+++ b/assets/styles/main/_fonts.scss
@@ -133,3 +133,45 @@
   font-style: italic;
   font-display: swap;
 }
+
+
+// Avenir Next
+@font-face {
+  font-family: 'Avenir Next';
+  src: url(~/static/fonts/Metropolis/Metropolis-Extralight.otf) format('opentype');
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Avenir Next';
+  src: url(~/static/fonts/Metropolis/Metropolis-Light.otf) format('opentype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Avenir Next';
+  src: url(~/static/fonts/Metropolis/Metropolis-Regular.otf) format('opentype');
+  font-weight: 400;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Avenir Next';
+  src: url(~/static/fonts/Metropolis/Metropolis-Medium.otf) format('opentype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Avenir Next';
+  src: url(~/static/fonts/Metropolis/Metropolis-Semibold.otf) format('opentype');
+  font-weight: 600;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Avenir Next';
+  src: url(~/static/fonts/Metropolis/Metropolis-Bold.otf) format('opentype');
+  font-weight: 700;
+  font-display: swap;
+}
