--- a/assets/styles/main/main.scss
+++ b/assets/styles/main/main.scss
@@ -127,3 +127,11 @@
   }
   & > div {width: 100%}
 }
+
+
+.text-gradient {
+  background: var(--Linear, linear-gradient(99deg, #A093F0 7.5%, #5A9FF7 94.48%)) !important;
+  background-clip: text !important;
+  -webkit-background-clip: text !important;
+  -webkit-text-fill-color: transparent !important;
+}
