--- a/assets/styles/components/landing/footer.scss
+++ b/assets/styles/components/landing/footer.scss
@@ -1,7 +1,7 @@
 // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // /
 // // // footer // // // 
 // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // /
-#footer {
+#footer-landing {
   transition: 0.5s $ease-return;
   border-radius: 6.25em 6.25em 0px 0px;
   min-height: 35.3125em;
