--- a/assets/styles/components/navbar.scss
+++ b/assets/styles/components/navbar.scss
@@ -51,12 +51,12 @@
       gap: 1em;
 
       .btn-nav{
-        background-color: #E1D8D1;
-        border: 2px solid #D7CBC1;
+        background-color: #E1D8D1 !important;
+        border: 2px solid #D7CBC1 !important;
         border-radius: 30px!important;
-        box-shadow: none;
-        max-height: 45px;
-        min-height: 45px;
+        box-shadow: none !important;
+        max-height: 45px !important;
+        min-height: 45px !important;
       }
 
       
@@ -102,4 +102,48 @@
 
 #menuNavbar {
   i { color: #000 !important }
+
+  .btn-nav{
+    background-color: #E1D8D1 !important;
+    border: 2px solid #D7CBC1 !important;
+    border-radius: 30px!important;
+    box-shadow: none !important;
+    max-height: 45px !important;
+    min-height: 45px !important;
+  }
+}
+
+
+.landing-menu .v-list {
+  border-radius: 4px;
+  background: #FFF;
+  box-shadow: 0px 4px 20px 0px rgba(36, 31, 58, 0.10);
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+
+  .v-list-item {
+    border-radius: 10px;
+    * { margin: 0 }
+
+    &--active::before {
+      background: linear-gradient(99deg, rgba(160, 147, 240, 0.10) 7.5%, rgba(90, 159, 247, 0.10) 94.48%) !important;
+    }
+
+    h6 {
+      color: #241F3A !important;
+      font-feature-settings: 'clig' off, 'liga' off;
+      font-family: "Roboto", sans-serif;
+      font-size: 14px;
+      font-weight: 500 !important;
+    }
+
+    p {
+      color: #7C7989;
+      font-feature-settings: 'clig' off, 'liga' off;
+      font-family: "Roboto", sans-serif;
+      font-size: 14px;
+      font-weight: 400 !important;
+    }
+  }
 }
