--- a/assets/styles/layouts/default.scss
+++ b/assets/styles/layouts/default.scss
@@ -1,7 +1,7 @@
 // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // /
-// // // landing-layout // // // 
+// // // layout // // // 
 // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // /
-#landing-layout {
+#layout {
   // overflow: hidden;
   //- responsive font size -//
   .v-main {
